[package]
name = "ling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = "0.11.10"
tokio = { version = "1.19.1", features = ["rt-multi-thread", "macros"] }
